--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     }
 
     async function getUserProfile() {
-      const profile = await liff.getProfile();
-      document.getElementById('userId').append(profile.UserId);
+      const profile = await liff.getProfile()
+      document.getElementById('userId').append(profile.UserId)
     }
 
     function getEnvironment() {
