--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 
     async function getUserProfile() {
       const profile = await liff.getProfile()
-      document.getElementById('userId').append(profile.UserId)
+      document.getElementById('userId').append(profile.userId)
     }
 
     function getEnvironment() {
