--- a/index.html
+++ b/index.html
@@ -74,6 +74,10 @@
     async function getUserProfile() {
       const profile = await liff.getProfile()
       document.getElementById('userId').append(profile.userId)
+      document.getElementById('pictureUrl').src = profile.pictureUrl
+      document.getElementById('displayName').append(profile.displayName)
+      document.getElementById('statusMessage').append(profile.statusMessage)
+      
     }
 
     function getEnvironment() {
