--- a/index.html
+++ b/index.html
@@ -66,6 +66,16 @@
     }
 
     async function sendMsg() {
+      if(liff.getContext().type !== "none"){
+       liff.sendMessages([
+         {
+           "type":"sticker",
+           "stickerId":1,
+           "packageId":1
+         }
+       ])
+        alert("OK")
+      }
     }
 
     function getContext() {
